Fix border spacing

--- a/src/accelerate/components/List.scss
+++ b/src/accelerate/components/List.scss
@@ -450,9 +450,6 @@ body.edit-php {
 		.record-name {
 			color: $color-dark-grey;
 			font-size: 0.65rem;
-			display: flex;
-			flex-direction: column;
-			align-items: stretch;
 
 			a {
 				text-decoration: none;
